[project]
name = "wifi-eye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "j178", email = "10510431+j178@users.noreply.github.com" }
]
dependencies = [
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"wifi-eye" = "wifi_eye:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/wifi_eye"]
